--- a/Andrew.CSS
+++ b/Andrew.CSS
@@ -1,14 +1,43 @@
 body {
-    background-color: rgb(228, 187, 226);
+    background-color: rgb(200, 224, 150);
     text-align:center
 }
 
  h1 {
-    color:rgb(12, 12, 87);
+    color:rgb(113, 113, 223);
     text-decoration: underline; 
     font-weight: bold 
 }
 
 p {
     font-size: 20px;
+} 
+
+h2 {
+    color: blueviolet;
+}
+
+.btn1 {
+    background-color: rgb(244, 245, 240) ;
+    color: rgb(8, 2, 1);
+    padding: 1%;
+    width: 5%;
+
+}
+
+
+.btn2 {
+    background-color: rgb(13, 12, 14) ;
+    color: rgb(247, 243, 242);
+    padding: 1%;
+    width: 5%;
+
+}
+
+.btnA {
+    background-color: rgb(174, 111, 238) ;
+    color: rgb(247, 243, 242);
+    padding: 1%;
+    width: 20%;
+
 }
